# CalculatorSkeleton

./: README.md
inc/: AbsOperator.h  AdditionOperator.h  CalculatorResources.h  DivisionOperator.h  Evaluator.h  IBinaryOperator.h  IOperation.h  IUnaryOperator.h  IoStreamCalculatorW2.h  MultiplicationOperator.h  OperatorFactory.h  ParenthesisOperation.h  SubtractionOperator.h  TestOperation.h
src/: AbsOperator.cpp  AdditionOperator.cpp  CMakeLists.txt  Calculator.cpp  DivisionOperator.cpp  Evaluator.cpp  IBinaryOperator.cpp  IOperation.cpp  IUnaryOperator.cpp  IoStreamCalculatorW2.cpp  MultiplicationOperator.cpp  OperatorFactory.cpp  ParenthesisOperation.cpp  SubtractionOperator.cpp  TestOperation.cpp  TokenizerW2.cpp  main.cpp
test/: CMakeLists.txt  testOperationGtest.cpp
